# scientific-rs-talk

./: .gitignore  Makefile  README.md  custom.css  scientific-rust.html  scientific-rust.md
examples/counting_sort/: Cargo.toml  benchmark.py
examples/counting_sort/src/: lib.rs
